--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 100ms linear;
   }
 }
 
@@ -31,8 +31,10 @@
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
+    top:0;
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(57deg);
+    top: 200px;
   }
 }
