--- a/src/component/Login/Login.css
+++ b/src/component/Login/Login.css
@@ -1,3 +1,133 @@
-.login {
-  background-color: red;
+*{
+  margin: 0;
+  padding: 0;
+  font-family: "Product sans";
+  box-sizing: border-box;
+}
+
+html,body{
+  width: 100%;
+  height: 100%;
+}
+
+#bg{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  overflow: hidden;
+}
+
+#left{
+  width: 50%;
+  height: 100%;
+  /* background-image: url(../images/twitter-fill.svg); */
+  background-image: url(./../../newAssest/teaching.svg);
+  background-position: center;
+  background-size: cover;
+}
+
+#right{
+  width: 50%;
+  height: 100%;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#panel{
+  width: 300px;
+  /* background-color: aqua */
+}
+
+#panel img{
+  width: 15%;
+  margin-bottom: 10px;
+}
+
+#panel h5{
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+#panel>p{
+  font-size: 16px;
+  margin-top: 20px;
+  color: #6c63ff;
+}
+
+#panel form{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+form input{
+  margin-top: 15px;
+  padding: 8px 15px;
+  border-radius: 2px;
+  outline-color: #6c63ff80;
+  border: 1.5px solid #dadada;
+  color: gray;
+  font-weight: 100;
+}
+
+form input::placeholder{
+  color: #00000054;
+  font-weight: 100;
+  font-size: 12px;
+}
+
+form input[type=submit]{
+  background-color: #6c63ff;
+  outline: none;
+  border: none;
+  border-radius: 100px;
+  padding: 12px;
+  color: #fff;
+  margin-top: 25px;
+  cursor: pointer;
+}
+
+form>p{
+  margin-top: 15px;
+  font-size: 11px;
+  color: #00000077;
+}
+
+form>p a{
+  text-decoration: none;
+  color: #6c63ff;
+  margin-left: 5px;
+}
+
+#profile{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#profile h1{
+  color: #000000bb;
+  margin-bottom: 20px;
+}
+
+#profile a{
+  color: #ffffff;
+  text-decoration: none;
+  padding: 8px 40px;
+  background-color: #6c63ff;
+  border-radius: 100px;
+}
+
+#leftReg{
+  background-image: url(./../../newAssest/professor.svg);
+  width: 50%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
 }
